Fixed Whitespace on no events found
Made extra whitespace on the index page when there are no events found from the search

Current Song: Quantum of Solace - James Bond

--- a/website/static/index.css
+++ b/website/static/index.css
@@ -351,6 +351,11 @@ html .maininfo:hover{
   text-decoration: none;
 }
 
+html .extra{
+  margin-top: 20pt ;
+  margin-bottom: 250pt ;
+}
+
 
 
 
